force-app/main/default/objects/Announcement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order in which messages are displayed.  If numbers are duplicated, the messages will be sorted by when they were created.</description>
    <inlineHelpText>The order in which messages are displayed.  If numbers are duplicated, the messages will be sorted by when they were created.</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>