force-app/main/default/objects/Announcement__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Schedule run dates for your message to be active.  The message will be displayed between the Start and End Dates.  These are ignored if the Active checkbox is checked.</description>
    <inlineHelpText>Schedule run dates for your message to be active.  The message will be displayed between the Start and End Dates.  These are ignored if the Active checkbox is checked.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>