force-app/main/default/objects/Announcement__c/fields/User_Profiles__c.field-meta.xml
<CustomField>
    <fullName>User_Profiles__c</fullName>
    <inlineHelpText>User Profiles for whom this message will be displayed.</inlineHelpText>
    <label>User Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AS_Ops User</fullName>
            </value>
            <value>
                <fullName>IM_Account Manager</fullName>
            </value>
            <value>
                <fullName>IM_Account Manager_Temporary</fullName>
            </value>
            <value>
                <fullName>IM_Account Manager Special</fullName>
            </value>
            <value>
                <fullName>IM_API_Read_Only</fullName>
            </value>
            <value>
                <fullName>IM_API Only_Admin</fullName>
            </value>
            <value>
                <fullName>IM_BoulderLogic_Marketing</fullName>
            </value>
            <value>
                <fullName>IM_Channel Manager</fullName>
            </value>
            <value>
                <fullName>IM_Commissions</fullName>
            </value>
            <value>
                <fullName>IM_Custom Sys Admin</fullName>
            </value>
            <value>
                <fullName>IM_Enterprise/SME</fullName>
            </value>
            <value>
                <fullName>IM_Executive</fullName>
            </value>
            <value>
                <fullName>IM_Marketing</fullName>
            </value>
            <value>
                <fullName>IM_Marketing Dashboard Admin</fullName>
            </value>
            <value>
                <fullName>IM_Product Manager</fullName>
            </value>
            <value>
                <fullName>IM_Read_Only_Except_Cases</fullName>
            </value>
            <value>
                <fullName>IM_Sales</fullName>
            </value>
            <value>
                <fullName>IM_Sales_eSignature</fullName>
            </value>
            <value>
                <fullName>IM_Sales_Ops-Cleanup Temporary</fullName>
            </value>
            <value>
                <fullName>IM_Sales_Schedule_A</fullName>
            </value>
            <value>
                <fullName>IM_Sales_Support</fullName>
            </value>
            <value>
                <fullName>IM_Sales Ops</fullName>
            </value>
            <value>
                <fullName>IM_Sales Ops Super User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>