force-app/main/default/objects/Announcement__c/recordTypes/BoB_Carousel_Announcement.recordType-meta.xml
<RecordType>
    <fullName>BoB_Carousel_Announcement</fullName>
    <active>true</active>
    <label>BoB Carousel Announcement</label>
</RecordType>