force-app/main/default/objects/Announcement__c/validationRules/Invalid_Schedule_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Schedule_Dates</fullName>
    <active>true</active>
    <description>This ensures that the proper schedule dates are entered so that carousel messages are displayed correctly.</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>The Start Date must be before the End Date.  Please check your date range.</errorMessage>
</ValidationRule>